@@ -84,6 +84,10 @@ C-API
 Library
 -------
 
+- Issue #5006: Better handling of unicode byte-order marks (BOM) in the io
+  library. This means, for example, that opening an UTF-16 text file in append
+  mode doesn't add a BOM at the end of the file if the file isn't empty.
+
 - Issue #3704: cookielib was not properly handling URLs with a / in the
   parameters.
 
